--- a/Views/User/Index.cshtml
+++ b/Views/User/Index.cshtml
@@ -3,3 +3,38 @@
 *@
 @{
 }
+<a asp-page="Create" class="btn btn-primary">Nuevo</a>
+
+<h1>Usuarios</h1>
+<table>
+	<thead>
+		<tr>
+			<th>Id</th>
+			<th>Nombre</th>
+			<th>Email</th>
+			<th>Contraseña</th>
+			<th>Nombre Usuario</th>
+		</tr>
+	</thead>
+	<tbody>
+
+		@foreach (var user in Model.User)
+		{
+			<tr>
+				<td>@user.Id</td>
+				<td>@user.Name</td>
+				<td>@user.Email</td>
+				<td>@user.Password</td>
+				<td>@user.username</td>
+
+				@*<td>
+					<a asp-page="Edit" asp-route-id="@user.Id" class="btn btn-danger">Edit</a>
+				</td>
+
+				<td>
+					<a asp-page="Delete" asp-route-id="@user.Id" class="btn btn-danger">Eliminar</a>
+				</td>*@
+			</tr>
+		}
+	</tbody>
+</table>
